--- a/angularapp/src/index.html
+++ b/angularapp/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Agaval</a>
+    <a class="navbar-brand" href="#">AGAVAL</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,7 +18,10 @@
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="/clientes">Clientes</a>
-        </li>
+        </li><li class="nav-item">
+          <a class="nav-link" href="/empleados">Empleados</a>
+        </li><li class="nav-item">
+          <a class="nav-link" href="/proveedores">Proveedores</a>
       </ul>
     </div>
   </nav>
