--- a/angularapp/src/index.html
+++ b/angularapp/src/index.html
@@ -18,10 +18,15 @@
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="/clientes">Clientes</a>
-        </li><li class="nav-item">
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/empleados">Empleados</a>
-        </li><li class="nav-item">
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/proveedores">Proveedores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/tipospersona">TiposPersona</a>
       </ul>
     </div>
   </nav>
